--- a/todo.txt
+++ b/todo.txt
@@ -1,5 +1,10 @@
 # TODO List - 联系人和群组功能完善
 
+## 项目概览
+**最后更新**: 2024-01-29
+**当前版本**: v0.2.0
+**主要目标**: 修复前后端数据传输问题，完善联系人和群组功能
+
 ## 已完成
 1. ✅ 好友申请功能 - 添加通知发送
 2. ✅ 好友申请DTO - 创建ContactRequestDto包含前端需要的字段
@@ -118,12 +123,80 @@ notificationService.createAndPublishNotification(
 1. ContactServiceImpl中的getContacts方法返回类型不一致（PENDING时应返回ContactRequestDto）
 2. 群组相关的VO类需要验证是否符合规范
 
-## 测试计划
-1. 测试好友申请功能（发送、接受、拒绝）
-2. 测试好友申请通知是否正常发送
-3. 测试群组创建和加入功能
-4. 测试群组列表API返回数据格式
-5. 验证前端能否正确显示群组信息
+## 综合测试计划
+
+### 好友功能测试用例
+**测试环境**: 开发环境 + 测试数据库
+**测试数据**: 预置3个测试用户账户
+
+1. **好友申请流程测试**
+   - [ ] 用户A搜索用户B并发送好友申请
+   - [ ] 验证用户B收到好友申请通知
+   - [ ] 用户B接受好友申请
+   - [ ] 验证双方好友列表更新
+   - [ ] 测试拒绝好友申请场景
+   - [ ] 验证被拒绝后无法重复发送（24小时内）
+
+2. **好友列表功能测试**
+   - [ ] 登录用户查看好友列表
+   - [ ] 验证好友信息完整性（username, nickname, avatar）
+   - [ ] 测试好友搜索功能
+   - [ ] 测试好友分组功能
+   - [ ] 测试删除好友功能
+
+3. **边界情况测试**
+   - [ ] 申请不存在的用户
+   - [ ] 申请自己为好友
+   - [ ] 重复申请已存在的好友
+   - [ ] 网络异常情况处理
+
+### 群组功能测试用例
+
+1. **群组创建和管理测试**
+   - [ ] 用户创建新群组
+   - [ ] 验证群主信息显示正确
+   - [ ] 测试群组信息修改
+   - [ ] 测试群组转让功能
+
+2. **群组加入和权限测试**
+   - [ ] 用户申请加入群组
+   - [ ] 群主批准/拒绝申请
+   - [ ] 验证成员角色权限（owner, admin, member）
+   - [ ] 测试群组列表显示（创建的 vs 加入的）
+
+3. **群组功能完整性测试**
+   - [ ] 群组消息发送（如已实现）
+   - [ ] 成员管理和踢出
+   - [ ] 群组设置修改权限
+   - [ ] 群组解散功能
+
+### 前端界面测试
+
+1. **ContactPage.vue测试**
+   - [ ] 页面加载正常
+   - [ ] 好友列表渲染正确
+   - [ ] 申请列表渲染正确
+   - [ ] 交互操作响应正常
+   - [ ] 移动端适配测试
+
+2. **GroupPage.vue测试**
+   - [ ] 群组列表显示正确
+   - [ ] 创建群组功能正常
+   - [ ] 群组详情页面数据完整
+   - [ ] 成员列表显示正确
+
+### 性能测试
+
+1. **API性能测试**
+   - [ ] 好友列表加载时间 < 500ms
+   - [ ] 群组列表加载时间 < 800ms
+   - [ ] 并发用户访问测试
+   - [ ] 大数据量测试（1000+好友/群组）
+
+2. **前端性能测试**
+   - [ ] 页面首次加载时间
+   - [ ] 列表滚动性能
+   - [ ] 内存使用情况
 
 ## 文档更新
 1. 更新backend.md - 添加ContactRequestDto和GroupDto说明
@@ -132,9 +205,18 @@ notificationService.createAndPublishNotification(
 
 ## 紧急问题修复
 
-### 问题1: 前端获取好友列表失败
+### 问题1: 前端获取好友列表失败 🚨
+**优先级**: **紧急** - 阻塞核心功能
+**风险等级**: **高** - 影响所有用户好友功能
+**目标完成**: 2024-01-30 (明天)
+**影响范围**: 好友列表无法显示，用户无法查看已添加的好友
+
+**依赖关系**:
+- 依赖数据库表结构确认
+- 必须在群组功能DTO重构前完成
+
 **文件**: Vue/src/contact/ContactPage.vue
-**问题描述**: 
+**问题描述**:
 - 前端调用 `GET /api/contacts?status=ACCEPTED` 获取好友列表
 - 后端返回 `List<UserDto>`，但UserDto字段与前端期望不匹配
 - UserDto只有id, name, avatar等基础字段
@@ -180,12 +262,33 @@ notificationService.createAndPublishNotification(
    - 使用contact.js模块而不是直接使用axiosInstance
    - 遵循前端开发规范第3条
 
-**实现优先级**: 高（影响核心功能）
+**实现优先级**: **紧急**（影响核心功能）
 **预计工作量**: 2-3小时
+**负责人**: 后端开发
+
+**测试计划**:
+- [ ] 用户A登录查看好友列表
+- [ ] 验证好友信息包含username, nickname等字段
+- [ ] 测试好友搜索功能
+- [ ] 验证好友申请流程完整
+
+**回滚方案**:
+- 保留原有API端点 /api/contacts-legacy
+- 数据库完整备份
+- 如有问题可快速切换到旧版本
 
 ---
 
-### 问题2: 前端获取群组列表字段不匹配
+### 问题2: 前端获取群组列表字段不匹配 🚨
+**优先级**: **高** - 影响群组功能
+**风险等级**: **中** - 部分群组功能无法使用
+**目标完成**: 2024-01-31 (后天)
+**影响范围**: 群组列表显示异常，用户无法查看群组详情
+
+**依赖关系**:
+- 依赖ContactDto问题解决
+- 可以与好友功能并行开发
+
 **文件**: Vue/src/group/GroupPage.vue
 **问题描述**:
 - 前端调用 `GET /api/groups/my-groups` 和 `GET /api/groups/my-created`
@@ -270,12 +373,33 @@ notificationService.createAndPublishNotification(
    - 如果后端统一使用createdAt，前端无需修改
    - 如果保持createTime，前端需要映射: `createdAt: group.createTime`
 
-**实现优先级**: 高（影响核心功能）
+**实现优先级**: **高**（影响核心功能）
 **预计工作量**: 3-4小时
+**负责人**: 后端开发
+
+**测试计划**:
+- [ ] 用户创建群组并验证ownerUsername显示
+- [ ] 用户加入群组并验证role字段正确
+- [ ] 测试群组列表排序和分页
+- [ ] 验证群组详情页面数据完整性
+
+**回滚方案**:
+- 保留原有Group模型API端点
+- 新增DTO版本API，逐步迁移
+- 数据库备份和回滚脚本准备
 
 ---
 
-### 问题3: 前端API调用不规范
+### 问题3: 前端API调用不规范 ⚠️
+**优先级**: **中** - 代码质量问题
+**风险等级**: **低** - 不影响功能，影响维护性
+**目标完成**: 2024-02-02 (本周五)
+**影响范围**: 代码可维护性差，新功能开发效率低
+
+**依赖关系**:
+- 依赖问题1和问题2解决
+- 可独立进行，不阻塞其他功能
+
 **问题描述**:
 - 前端组件直接使用axiosInstance调用API
 - 违反前端开发规范第3条: "新的API请求应根据业务领域添加到src/api/modules/目录下的对应模块中"
@@ -395,6 +519,41 @@ notificationService.createAndPublishNotification(
 
 ---
 
+## 风险管控和回滚策略
+
+### 数据库变更风险控制
+1. **备份策略**
+   - 每次数据库结构变更前完整备份
+   - 保留最近7天的数据库备份
+   - 测试环境先行验证
+
+2. **回滚计划**
+   - 数据库回滚脚本准备
+   - API版本兼容性处理
+   - 前端快速回滚机制
+
+### 部署策略
+1. **分阶段部署**
+   - 后端API先行部署测试
+   - 数据库变更在低峰期进行
+   - 前端更新后端验证通过
+
+2. **监控和告警**
+   - API响应时间监控
+   - 错误率告警设置
+   - 用户体验指标跟踪
+
+### 应急响应
+1. **问题分类**
+   - P0: 核心功能不可用 - 30分钟内响应
+   - P1: 重要功能异常 - 2小时内响应
+   - P2: 次要问题 - 24小时内响应
+
+2. **应急联系人**
+   - 后端负责人: [待填写]
+   - 前端负责人: [待填写]
+   - 运维负责人: [待填写]
+
 ## 注意事项
 1. 所有数据库操作必须在ServiceImpl中使用@Transactional
 2. 所有DTO必须包含前端需要的完整字段
@@ -405,3 +564,9 @@ notificationService.createAndPublishNotification(
 7. 前端必须使用API模块封装，禁止直接使用axiosInstance
 8. 新增DTO必须在backend.md中记录
 9. API变更必须同步更新前端API模块
+10. **重要**: 所有高优先级修复必须经过完整测试后再上线
+
+## 版本发布计划
+- **v0.2.0** (目标: 2024-01-31) - 修复好友和群组列表显示问题
+- **v0.2.1** (目标: 2024-02-02) - 完善API规范和代码质量
+- **v0.3.0** (目标: 2024-02-05) - 完成通知系统功能
